@@ -7,7 +7,7 @@ SECTIONS
        	.text ALIGN(4)  : { *(.init) *(.text) *(.text.*) *(.gnu.linkonce.t.*) }
        	. = 0x0;
        	.data ALIGN(16) : { *(.data0) *(.data) *(.rodata.str1.4)  *(.rodata.cst4) *(.rodata.cst8) *(.reginfo) }
-       	.rodata ALIGN(16) : { *(.rodata) *(.rodata.*) *(.gnu.linkonce.r.*) }
+       	.rodata ALIGN(16) : { *(.rodata) *(.rodata.*) *(.gnu.linkonce.r.*) *(.cibylsetjmp) }
 	PROVIDE(__ctors_begin = .);
 	.ctors ALIGN(4): { *(.ctors) }
 	PROVIDE(__ctors_end = .);
